<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_sort"
        android:title="@string/sortby"
        android:orderInCategory="1"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">


            <menu>

                <item android:id="@+id/action_popular"
                    app:showAsAction="ifRoom"
                    android:title="@string/popular_movies" />
                <item android:id="@+id/action_now_playing"
                    app:showAsAction="ifRoom"
                    android:title="@string/now_playing_movies" />
                <item android:id="@+id/action_top_rated"
                    app:showAsAction="ifRoom"
                    android:title="@string/top_rated_movies" />
                <item android:id="@+id/action_upcoming"
                    app:showAsAction="ifRoom"
                    android:title="@string/upcoming_movies" />
                <item android:id="@+id/action_favourite"
                    app:showAsAction="ifRoom"
                    android:title="@string/favourited_movies" />
            </menu>

        </item>

</menu>